--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ header > div > a:first-child {
   background-color: white;
   border: none;
   color: #000000;
-  padding: 17px;
+  padding: 15px 20px;
   border-radius: 60px;
   font-weight: bold;
 }
