--- a/css/style.css
+++ b/css/style.css
@@ -135,10 +135,12 @@ article {
     scrollbar-width: none;
     gap: 15px;
     padding: 20px;
+    height: 150px;
 }
 
 .section .carrossel li img{
     border-radius: 10px;
+    height: 100%;
 }
 
 
