--- a/css/style.css
+++ b/css/style.css
@@ -132,13 +132,14 @@ article {
 .section .carrossel{
     display: flex;
     overflow-x: auto;
-    scrollbar-width: none;
-  
+    gap: 10px;
+
     padding: 20px;
     height: 150px;
 }
 
 .section .carrossel li img{
+    flex-grow: 1;
     border-radius: 10px;
     height: 100%;
 }
