--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ a {
   flex-direction: column;
 }
 header {
+ 
   background-color: #35353562;
   padding: 10px;
   display: flex;
@@ -50,7 +51,7 @@ header > div > a:first-child {
   align-items: center;
   gap: 20px;
 }
-.mobile-btn,.drop-content li:nth-child(7) a{
+.mobile-btn{
   background-color: white;
   border: none;
   color: #000000;
@@ -135,8 +136,9 @@ aside {
     overflow-x: auto;
     scrollbar-width: none;
     padding: 15px 0;
+    transition: all 3.5s ease;
+    scroll-behavior: smooth;
 }
-
 
 .section .carrossel li figure{
     padding: 10px;
@@ -148,34 +150,45 @@ aside {
 }
 .section .carrossel li img{
     height: 80%;
-}
-.section-1 .carrossel li img{
-  border-radius: 10px;
+    border-radius: 10px;
 }
 .section .carrossel li figcaption{
   color: #d8d8d8;
   font-size: 0.9rem;
 }
 
+.container-carrossel{
+  position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  overflow: hidden;
+}
 
-.carrossel::before {
-  position: absolute;
-  font-family: "Font Awesome 6 Free";
-  font-weight: 900;
-  content: "\f04a";
-  left: 2%;
-  width: 10px;
-  color: #ffffff83;
+.container-carrossel button{
+   position: absolute;
+   padding: 10px;
+   border-radius: 50%;
+   border: none;
+   background-color:#383838ab;
+  transition: 0.4s;
 }
-.carrossel::after {
-  position: absolute;
-  right: 2%;
-  font-family: "Font Awesome 6 Free";
-  font-weight: 900;
-  content: "\f04e";
-  width: 10px;
-  color: #ffffff83;
+.container-carrossel button:hover{
+  background-color: #747474d2;
 }
+.container-carrossel button:hover i{
+  color: white;
+}
+.next i, .prev i{
+  color: rgba(255, 255, 255, 0.767);
+}
+.prev{
+  left: 10px;
+}
+.next{
+  right: 10px;
+}
+
 
 .carrossel:hover::after{
   color: white;
@@ -318,6 +331,15 @@ hr{
     content: "\f0ab";
     padding-right: 7px;
   }
+
+  .drop-content li:nth-child(7) a{
+     background-color: white;
+  border: none;
+  color: #000000;
+  padding: 15px 20px;
+  border-radius: 60px;
+  font-weight: bold;
+  }
   
 
 
@@ -364,9 +386,7 @@ hr{
 
 
 footer {
-  margin-top: 40px;
-  padding-top: 30px;
-    width: 100%;
+  padding:20px 10px 10px 0px;
   background-color: #35353527;
 }
 footer nav ul{
