--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,11 @@ header > div > a:first-child {
   border: none;
   background: unset;
   font-size: x-large;
-}
+  }
 
 .drop-content {
   background-color: rgb(31, 30, 30);
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   height: 100vh;
@@ -77,6 +77,7 @@ header > div > a:first-child {
   flex-direction: column;
   overflow: hidden;
   transition: 0.7s;
+  z-index: 1000;
 }
 .show {
   max-height: 100vh;
