--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ a {
   flex-direction: column;
 }
 header {
- 
+  flex: 0 0 auto;
   background-color: #35353562;
   padding: 10px;
   display: flex;
@@ -390,6 +390,7 @@ footer {
   padding:20px 10px 10px 0px;
   background-color: #35353527;
   position: sticky;
+  flex: 0 0 auto;
 }
 footer nav ul{
     margin: auto;
