--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,7 @@ footer {
   background-color: #35353527;
   position: sticky;
   bottom: 0;
+  z-index: 100;
 }
 footer nav ul{
     margin: auto;
